--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
 
     <main class="main">
-      <section class="main__section">
+      <section class="main__section main__section_wide">
         <h2 class="main__title">Почему сосредоточиться так сложно</h2>
         <div class="main__cards">
           <article class="main__card">
@@ -96,7 +96,7 @@
           </article>
         </div>
       </section>
-      <section class="main__section">
+      <section class="main__section main__section_wide">
         <h2 class="main__title">Что снижает концентрацию внимания?</h2>
         <div class="main__special">
           <article class="main__card main__card_type_special">
